After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 622605 - fix passing in type names as a GType and add gtype unit tests
fix passing in type names as a GType and add gtype unit tests
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: introspection
unspecified
Other All
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2010-06-24 14:11 UTC by johnp
Modified: 2010-07-26 10:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix passing in type names as a GType and add gtype unit tests (3.25 KB, patch)
2010-06-24 14:11 UTC, johnp
none Details | Review
fix passing in type names as a GType and add gtype unit tests (4.08 KB, patch)
2010-06-24 14:31 UTC, johnp
accepted-commit_now Details | Review

Description johnp 2010-06-24 14:11:15 UTC
* argument check expression had a logic error - fix made || expression &&
* added unit tests to check for correct GType value passing
* fixed up tree override tests to also check different ways of passing GTypes
Comment 1 johnp 2010-06-24 14:11:17 UTC
Created attachment 164508 [details] [review]
fix passing in type names as a GType and add gtype unit tests
Comment 2 johnp 2010-06-24 14:31:09 UTC
Created attachment 164510 [details] [review]
fix passing in type names as a GType and add gtype unit tests

* a simple call to pyg_type_from_object covers all the bases
* added unit tests to check for correct GType value passing
* fixed up tree override tests to also check different ways of passing GTypes
Comment 3 johnp 2010-06-24 14:32:37 UTC
Comment on attachment 164508 [details] [review]
fix passing in type names as a GType and add gtype unit tests

New patch simplifies the check and adds a couple of more tests for invalid type names and custom types
Comment 4 johnp 2010-07-26 10:22:37 UTC
Comment on attachment 164510 [details] [review]
fix passing in type names as a GType and add gtype unit tests

Tomeu says commit but he doesn't have internet