fix passing in type names as a GType and add gtype unit tests

* a simple call to pyg_type_from_object covers all the bases
* added unit tests to check for correct GType value passing
* fixed up tree override tests to also check different ways of passing GTypes

https://bugzilla.gnome.org/show_bug.cgi?id=622605